src/scss/components/eden/_eden-c-table.scss
@use '../../abstracts' as *;

.eden-c-table {
    width: 100%;
    margin-block-start: var(--eden-sys-spacing-sm);
    margin-block-start: var(--eden-sys-spacing-xs);
    padding: var(--eden-sys-spacing-xs);

    th, td {
        --_cell-accent-bg: var(--eden-comp-table-cell-bg, #{ $eden-ref-neutral-0 });
        --_cell-accent-text: var(--eden-comp-table-cell-text, var(--eden-sys-on-primary));
        --_cell-justify: center;

        padding: 0;
        display: flex;
        align-items: center;
        justify-content: var(--_cell-justify);
        border-top: 1px solid var(--eden-sys-border-color-default);
        border-right: 1px solid var(--eden-sys-border-color-default);
        overflow: hidden;

        &:first-child {
            border-left: 1px solid var(--eden-sys-border-color-default);
        }

        &.--row-label {
            --_cell-justify: flex-start;
            padding-inline-start: var(--eden-sys-spacing-3xs);
            line-height: var(--eden-sys-line-height-sm);
        }

        &.--align-left {
            --_cell-justify: flex-start;
        }

        &.--borderless {
            border: none;
        }

        &.--dark {
            background-color: var(--_cell-accent-bg);
            color: var(--_cell-accent-text);
            font-weight: var(--eden-sys-text-bold);
        }
    }

    &__row {
        display: contents;

        &--last {
            td { border-bottom: 1px solid var(--eden-sys-border-color-default); }
        }
    }

    input {
        border: none;
    }
}

